# PetSwipe-Match-App

./: .env.production.example  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEVOPS.md  Dockerfile.compute  Jenkinsfile  MONITORING.md  Makefile  README.md  codex-solid-refactor-20260313-rerun-2.txt  codex-solid-refactor-20260313083840-part2.txt  codex-solid-refactor-20260314-rerun-3.txt  codex-solid-refactor-20260315-rerun-4.txt  codex-solid-refactor-20260315-rerun-5.txt  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pull_and_run.sh  pyproject.toml  refactor-solid-principles-note.js  upload_to_ghcr.sh
.claude/: README.md  settings.json  settings.local.json
.codex/: README.md  config.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  SECURITY.md
agentic_ai/: .gitignore  Dockerfile  Makefile  README.md  __init__.py  docker-compose.yml  requirements.txt
ansible/: README.md  ansible.cfg  playbook.yml
aws/: Makefile  README.md  aws-alb.sh  aws-messaging.js  aws.js  deploy.sh  ecr-tools.sh  ecs-utils.sh  rds-ops.sh  s3-lifecycle.sh
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
codex/: solid_refactor_marker_20260310171744_85.js  solid_refactor_marker_20260311173138_18.js  solid_refactor_marker_20260312215606_85.js  solid_refactor_marker_20260312225425_85.js
docs/: AGENTIC_MCP.md  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_REFERENCE.md  (+2 more)
(+390 files in other folders)
