[project]
name = "PetSwipe"
version = "0.1.0"
description = "Python package for PawSwipe, an app that helps users find and adopt pets."
authors = [
    { name="Son Nguyen", email="hoangson091104@gmail.com" },
]
dependencies = [
    "detect-secrets==1.5.0",
]

[build-system]
requires = ["setuptools>=42", "wheel", "tomli>=1.1.0"]
build-backend = "setuptools.build_meta"

